big commit, got all B,S,D listed on homepage

--- a/client/src/assets/scss/_variables.scss
+++ b/client/src/assets/scss/_variables.scss
@@ -24,6 +24,6 @@ $theme-colors: (
   "teal": $teal,
   "cyan":$cyan,
   // Custom colors
-  "codeworks": #141d2b,
+  "codeworks": #3a1200,
   "vue": #42b883,
 );
